fix text visibility on mobile

--- a/_sass/_standings.scss
+++ b/_sass/_standings.scss
@@ -11,6 +11,7 @@
     padding-top: 200px;
     //-webkit-clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
     //clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
+    color: white;
     h1 {
       font-size: 250%;
       padding-top: 50px;
@@ -114,7 +115,7 @@
   }
 
   .arrow {
-    border: solid black;
+    border: solid white;
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 3px;
@@ -123,6 +124,7 @@
   .up {
     transform: rotate(-135deg);
     -webkit-transform: rotate(-135deg);
+    
   }
   .down {
     transform: rotate(45deg);
@@ -170,6 +172,7 @@
         flex-direction: column;
         -webkit-clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
         clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
+        color: black;
         h1 {
           font-size: 250%;
         }
@@ -270,5 +273,12 @@
 
         cursor: pointer;
 
+      }
+
+      .arrow {
+        border: solid black;
+        border-width: 0 3px 3px 0;
+        display: inline-block;
+        padding: 3px;
       }
 }
